Reviews things implemented
